AngularLoadBalService.yaml
apiVersion: v1
kind: Service
metadata:
    name: gitui-lb
spec:
    type: LoadBalancer
    ports:
        - targetPort: 4200
          port: 4200
    selector: 
        app: gitui
